--- a/src/scss/_cells.scss
+++ b/src/scss/_cells.scss
@@ -3,4 +3,67 @@
   align-items: center;
   width: 64%;
   text-align: center;
+  @media(max-width: 940px) {
+    width: 65.8%;
+  }
+  @media(max-width: 908px) {
+    width: 68.1%;
+  }
+  @media(max-width:768px) {
+    order:4;
+    justify-content: center;
+    margin-left: 20px;
+    width: 89%;
+    padding: 15px 0;
+    border-top: $border;
+    height: 106px;
+  }
+  @media(max-width:576px) {
+    width:86%;
+  }
+  @media(max-width: 375px) {
+    width:84%;
+  }
+
+  .cell {
+    width: 13.41%;
+    border-left: $border;
+    padding: 17.5px 0;
+    @media(max-width: 768px) {
+      width: 33.33%;
+      padding: 15px 0;
+    }
+
+    .cell__number {
+      font-size: 20px;
+    }
+    
+    .cell__number--active {
+      color: $active;
+    }
+    
+    .cell__text {
+      font-size: 10px;
+      color: $main-font;
+    }
+  }
+
+  .main-cell {
+    width: 19.5%;
+    text-align: center;
+    @media(max-width: 768px) {
+      border-left: none;
+      width: 33.33%;
+    }
+  }
+
+  .cell--last {
+    border-right: $border;
+  }
+
+  .cell--hide {
+    @media(max-width: 768px) {
+      display: none;
+    }
+  }
 }
