--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,202 +7,9 @@
 @import 'altcoins';
 @import 'ethereum';
 @import 'cells';
+@import 'action';
 
 
 
 
 
-
-
-// .cells {
-//   display: flex;
-//   align-items: center;
-//   width: 64%;
-//   text-align: center;
-// }
-
-.cell {
-  width: 13.41%;
-  border-left: $border;
-  padding: 17.5px 0;
-}
-
-.cell--last {
-  border-right: $border;
-}
-
-.main-cell {
-  width: 19.5%;
-}
-
-.cell__number {
-  font-size: 20px;
-}
-
-.cell__number--active {
-  color: $active;
-}
-
-.cell__text {
-  font-size: 10px;
-  color: $main-font;
-}
-
-
-.action {
-  width: 9.4%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.btn {
-  margin-top: 20px;
-  font-size: 10px;
-  font-weight: 600;
-  text-align: center;
-  text-shadow: $text-shadow;
-  background: $gradient;
-  box-shadow: $box-shadow;
-  border-radius: $border-radius;
-  padding: 10px 11px;
-  border: none;
-  color: $white;
-  text-transform: uppercase;
-  cursor: pointer;
-
-  &:hover {
-    box-shadow: $box-shadow-hover;
-    transition: $transition-btn;
-  }
-}
-
-
-.icons {
-  margin: 10px 0;
-  width: 75%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.action__icon {
-  height: 20px;
-  width: 20px;
-  cursor: pointer;
-}
-
-.icons__eye {
-  background: $eye;
-  background-position: center;
-
-  &:hover {
-    background: $eye-hover;
-    background-position: center;
-    transition: $transition-icon;
-  }
-
-}
-
-
-.icons__balance {
-  background: $balance;
-  background-position: center;
-
-  &:hover {
-    background: $balance-hover;
-    background-position: center;
-    transition: $transition-icon;
-  }
-}
-
-
-
-
-@media (max-width:940px) {
-  
-  .cells {
-    width: 65.8%;
-  } 
-
-  
-}
-
-
-@media(max-width:908px) {
-  
-
-  .cells {
-    width: 68.1%;
-  }
-}
-
-
-@media (max-width:768px) {
-
- 
-
-
-
-  .action {
-    order:3;
-    width: 89%;
-    margin-left: 20px;
-    margin-top: -25px;
-  }
-
-  .btn {
-    width: 100%;
-  }
-
-  .cells {
-    order:4;
-    justify-content: center;
-    margin-left: 20px;
-    width: 89%;
-    padding: 15px 0;
-    border-top: 1px solid rgba(151,151,151,0.2);
-    height: 106px; /**/
-  }
-
-  .cell {
-    width: 33.33%;
-    padding: 15px 0;
-    /* margin: 25px 0; */
-  }
-
-  .main-cell {
-    border-left: none;
-  }
-
-  .cell--hide {
-    display: none;
-  }
-
-  .icons__balance {
-    display: none;
-  }
-
-  .icons__eye {
-    position: absolute;
-    top: 0;
-    right: 0%;
-    margin: 23px 14.5px 0 0;
-  }
-}
-
-@media (max-width:576px) {
-
-  .action, .cells {
-    width:86%;
-  }
-
-
-}
-
-@media (max-width: 375px) {
-  .action, .cells {
-    width:84%;
-  }
-}
