--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,6 +7,7 @@ $border:  1px solid rgba(151,151,151,0.2);
 $gradient: linear-gradient(90deg, #D22D4F 0%, #F86358 100%);
 $box-shadow: 0 2px 4px 0 rgba(250,91,30,0.34);
 $box-shadow-hover: 0 4px 7px 0 rgba(60,23,10,0.34);
+$box-shadow-container: 0 2px 7px 0 rgba(60,23,10,0.34);
 $text-shadow: 0 1px 1px 0 rgba(95,95,95,0.3);
 $border-radius: 4px;
 $transition-btn: .3s;
