--- a/src/scss/_ethereum.scss
+++ b/src/scss/_ethereum.scss
@@ -15,6 +15,10 @@
     width:95%;
     margin-left: 20px;
   }
+  @media(max-width:383px) {
+    width: 90%;
+    margin-left: 0;
+  }
 
   .ethereum__title {
     height: 40px;
