--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,6 +9,7 @@ $box-shadow: 0 2px 4px 0 rgba(250,91,30,0.34);
 $box-shadow-hover: 0 4px 7px 0 rgba(60,23,10,0.34);
 $box-shadow-container: 0 2px 7px 0 rgba(60,23,10,0.34);
 $text-shadow: 0 1px 1px 0 rgba(95,95,95,0.3);
+$text-shadow-altcoins: 0 1px 1px 0 rgba(153,153,153,0.45);
 $border-radius: 4px;
 $transition-btn: .3s;
 $transition-icon: .5s;
