--- a/src/scss/_ethereum.scss
+++ b/src/scss/_ethereum.scss
@@ -30,9 +30,9 @@
 
   .line {
     font-size: 10px;
-    line-height: 16px;
     display: flex;
     align-items: center;
+    height: 19px;
 
     .line__img {
       margin: 3px 6px 0 -3.5px;
