--- a/src/scss/_action.scss
+++ b/src/scss/_action.scss
@@ -43,7 +43,7 @@
 
   .icons {
     margin: 10px 0;
-    width: 75%;
+    width: 74px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -61,7 +61,7 @@
         position: absolute;
         top: 0;
         right: 0%;
-        margin: 23px 14.5px 0 0;
+        margin: 23px 15px 0 0;
       }
     
       &:hover {
